Добавил сущность AccountStatus, сервис и контроллер для нее
